rust/parser-sql/src/snapshots/parse_sql_fragments@assigns.sql.snap
---
source: rust/parser-sql/src/lib.rs
assertion_line: 459
expression: parse_info
input_file: fixtures/fragments/sql/assigns.sql
---
{
  "syntaxErrors": false,
  "semanticDigest": 17300026075160338027,
  "executionDependencies": [
    {
      "type": "ExecutionDependency",
      "dependencyNode": {
        "type": "Variable",
        "name": "table_1",
        "kind": "Datatable",
        "namespace": "fragments/sql/assigns.sql"
      },
      "dependencyRelation": "Uses",
      "codeLocation": [
        0,
        36,
        0,
        43
      ]
    },
    {
      "type": "ExecutionDependency",
      "dependencyNode": {
        "type": "Variable",
        "name": "table_1",
        "kind": "Datatable",
        "namespace": "fragments/sql/assigns.sql"
      },
      "dependencyRelation": "Uses",
      "codeLocation": [
        2,
        38,
        2,
        45
      ]
    }
  ],
  "executionDependents": [
    {
      "type": "ExecutionDependent",
      "dependentNode": {
        "type": "Variable",
        "name": "view_1",
        "kind": "Datatable",
        "namespace": "fragments/sql/assigns.sql"
      },
      "dependentRelation": "Assigns",
      "codeLocation": [
        0,
        12,
        0,
        18
      ]
    },
    {
      "type": "ExecutionDependent",
      "dependentNode": {
        "type": "Variable",
        "name": "table_2",
        "kind": "Datatable",
        "namespace": "fragments/sql/assigns.sql"
      },
      "dependentRelation": "Assigns",
      "codeLocation": [
        2,
        13,
        2,
        20
      ]
    },
    {
      "type": "ExecutionDependent",
      "dependentNode": {
        "type": "Variable",
        "name": "table_3",
        "kind": "Datatable",
        "namespace": "fragments/sql/assigns.sql"
      },
      "dependentRelation": "Assigns",
      "codeLocation": [
        4,
        13,
        4,
        20
      ]
    },
    {
      "type": "ExecutionDependent",
      "dependentNode": {
        "type": "Variable",
        "name": "table_3.col_a",
        "kind": "DatatableColumn",
        "namespace": "fragments/sql/assigns.sql"
      },
      "dependentRelation": "Declares",
      "codeLocation": [
        4,
        13,
        4,
        20
      ]
    },
    {
      "type": "ExecutionDependent",
      "dependentNode": {
        "type": "Variable",
        "name": "table_3.col_b",
        "kind": "DatatableColumn",
        "namespace": "fragments/sql/assigns.sql"
      },
      "dependentRelation": "Declares",
      "codeLocation": [
        4,
        13,
        4,
        20
      ]
    },
    {
      "type": "ExecutionDependent",
      "dependentNode": {
        "type": "Variable",
        "name": "table_3.col_c",
        "kind": "DatatableColumn",
        "namespace": "fragments/sql/assigns.sql"
      },
      "dependentRelation": "Declares",
      "codeLocation": [
        4,
        13,
        4,
        20
      ]
    }
  ],
  "executionTags": []
}
