rust/parser-sql/src/snapshots/parse_sql_fragments@create-table.sql.snap
---
source: rust/parser-sql/src/lib.rs
assertion_line: 455
expression: resource_info
input_file: fixtures/fragments/sql/create-table.sql
---
{
  "resource": {
    "type": "Code",
    "path": "fragments/sql/create-table.sql",
    "id": "",
    "kind": "SoftwareSourceCode",
    "language": "sql"
  },
  "relations": [
    [
      {
        "type": "Assigns",
        "range": [
          3,
          13,
          3,
          20
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/sql/create-table.sql",
        "name": "table_a",
        "kind": "Datatable"
      }
    ]
  ],
  "compile_digest": "17526273571211583829.10305857154133940898.0.0.0",
  "tags": []
}
