rust/parser-sql/src/snapshots/parse_sql_fragments@uses.sql.snap
---
source: rust/parser-sql/src/lib.rs
assertion_line: 459
expression: parse_info
input_file: fixtures/fragments/sql/uses.sql
---
{
  "language": "sql",
  "syntaxErrors": false,
  "semanticDigest": 7162091459807791282,
  "executionDependencies": [
    {
      "type": "ExecutionDependency",
      "dependencyNode": {
        "type": "Variable",
        "name": "table_a",
        "namespace": "fragments/sql/uses.sql",
        "kind": "Datatable"
      },
      "dependencyRelation": "Uses",
      "codeLocation": [
        0,
        14,
        0,
        21
      ]
    },
    {
      "type": "ExecutionDependency",
      "dependencyNode": {
        "type": "Variable",
        "name": "table_b",
        "namespace": "fragments/sql/uses.sql",
        "kind": "Datatable"
      },
      "dependencyRelation": "Uses",
      "codeLocation": [
        2,
        14,
        2,
        21
      ]
    },
    {
      "type": "ExecutionDependency",
      "dependencyNode": {
        "type": "Variable",
        "name": "table_d",
        "namespace": "fragments/sql/uses.sql",
        "kind": "Datatable"
      },
      "dependencyRelation": "Uses",
      "codeLocation": [
        4,
        14,
        4,
        21
      ]
    },
    {
      "type": "ExecutionDependency",
      "dependencyNode": {
        "type": "Variable",
        "name": "table_e",
        "namespace": "fragments/sql/uses.sql",
        "kind": "Datatable"
      },
      "dependencyRelation": "Uses",
      "codeLocation": [
        4,
        55,
        4,
        62
      ]
    }
  ],
  "executionDependents": [],
  "executionTags": []
}
